Added ractive examples

--- a/ractiveProxies.html
+++ b/ractiveProxies.html
@@ -5,7 +5,7 @@
         <title>RactiveJS</title>
         <link rel="stylesheet" href="assets/vendor/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="assets/css/component.css">
-        <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=PT+Sans:400,700|Open+Sans:400,300,700'>
+        <!-- <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=PT+Sans:400,700|Open+Sans:400,300,700'> -->
     </head>
     <body>
       <header class="header">
@@ -18,7 +18,7 @@
 
       <div class="jumbotron">
         <div class="container">
-          <h1>Two way binding</h1>
+          <h1>Proxies</h1>
         </div>
       </div>
 
@@ -38,19 +38,22 @@
       </footer>
 
       <script id='template' type='text/ractive'>
-        <label>
-          Enter your name:
-          <input value='{{name}}'>
-        </label>
-
-        <p>Hello {{name}}, I am Ractive</p>
+        <button on-click='hello' class='btn btn-primary'>Hello!</button>
       </script>
 
-      <script src='assets/vendor/ractive/ractive.min.js'></script>
+      <script src='assets/vendor/ractive/ractive-legacy.js'></script>
+      <script src="assets/vendor/ractive/ractive-events-tap.js"></script>
+      <script src="assets/vendor/ractive/ractive-transitions-slide.js"></script>
+      <script src="assets/vendor/ractive/bundle.js"></script>
+
       <script>
         var ractive = new Ractive({
           el: '#output',
           template: '#template'
+        });
+
+        ractive.on( 'hello', function ( event ) {
+          alert( 'Hello there!' );
         });
       </script>
   </body>
